SERVER-31047 Rollback properly removes redundant index operations